@@ -1971,24 +1971,26 @@ dos clipboard api                                = true
 ipx = false
 
 [ne2000]
-#  ne2000: Enable Ethernet passthrough. Requires [Win]Pcap.
-# nicbase: The base address of the NE2000 board.
-#  nicirq: The interrupt it uses. Note serial2 uses IRQ3 as default.
-# macaddr: The physical address the emulator will use on your network.
-#            If you have multiple DOSBox-Xes running on your network,
-#            this has to be changed for each. AC:DE:48 is an address range reserved for
-#            private use, so modify the last three number blocks.
-#            I.e. AC:DE:48:88:99:AB.
-# realnic: Specifies which of your network interfaces is used.
-#            Write 'list' here to see the list of devices in the
-#            Status Window. Then make your choice and put either the
-#            interface number (2 or something) or a part of your adapters
-#            name, e.g. VIA here.
-ne2000  = false
-nicbase = 300
-nicirq  = 3
-macaddr = AC:DE:48:88:99:AA
-realnic = list
+#      ne2000: Enable Ethernet passthrough. Requires [Win]Pcap.
+#     nicbase: The base address of the NE2000 board.
+#      nicirq: The interrupt it uses. Note serial2 uses IRQ3 as default.
+#     macaddr: The physical address the emulator will use on your network.
+#                If you have multiple DOSBox-Xes running on your network,
+#                this has to be changed for each. AC:DE:48 is an address range reserved for
+#                private use, so modify the last three number blocks.
+#                I.e. AC:DE:48:88:99:AB.
+#     realnic: Specifies which of your network interfaces is used.
+#                Write 'list' here to see the list of devices in the
+#                Status Window. Then make your choice and put either the
+#                interface number (2 or something) or a part of your adapters
+#                name, e.g. VIA here.
+# pcaptimeout: Specifies the read timeout for pcap in milliseconds, or the default value will be used.
+ne2000      = false
+nicbase     = 300
+nicirq      = 3
+macaddr     = AC:DE:48:88:99:AA
+realnic     = list
+pcaptimeout = default
 
 [ide, primary]
 #                  enable: Enable IDE interface
